# openDVP

./: .gitignore  .pre-commit-config.yaml  README.md  data.csv  dependencies.txt  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml  testing.yml
docs/: ContributionGuide.md  conf.py  index.md
docs/Tutorials/: T1_ImageAnalysis.ipynb  T2_DownstreamProteomics.ipynb  T3_DownstreamProteomics.ipynb  T3_ProteomicsIntegration.ipynb  T4_Segmask_to_shapes.ipynb  T5_Thresholding_tutorial.ipynb
docs/Tutorials/basics/: Tutorial_1.ipynb  Tutorial_3.ipynb
docs/Tutorials/old/: T1_ImageAnalysis.ipynb  T1_ImageAnalysis_v2.ipynb  T2_DownstreamProteomics_v2.ipynb  T2_ProteomicsIntegration.ipynb  T3_DownstreamProteomics.ipynb  T3_ProteomicsIntegration_v2.ipynb
docs/Workflows/: _work_index.md  index.md  openDVP_guide.md  openDVP_guide_backup_b4_MDC.md  uv_tutorial.md
docs/Workflows/Computational/: Computational.md  GettingStartedWithMCMICRO.md  GettingStartedWithSOPA.md  GettingStartedWithUV.md  InstallOpenDVP.md  index.md
docs/Workflows/Experimental/: Experimental.md  Experimental_Imaging.md  Experimental_Tissue_and_Slides.md  index.md
docs/api/: plotting.md
src/opendvp/experimental/: plot_MLM_heatmap.py  plot_ORA_heatmap.py  plot_ORA_source_variables.py
src/opendvp/imaging/: mask_to_polygons.py
src/opendvp/io/: DIANN_to_adata.py  __init__.py  adata_to_qupath.py  adata_to_voronoi.py  export_adata.py  export_figure.py  import_perseus.py  import_thresholds.py  quant_to_adata.py  segmask_to_qupath.py
src/opendvp/metrics/: __init__.py  coefficient_of_variation.py  nan_difference.py
src/opendvp/plotting/: __init__.py  abundance_histograms.py  coefficient_of_variation.py  correlation_heatmap.py  density.py  dual_axis_boxplots.py  dynamic_histogram.py  histogram_w_imputation.py  pca_loadings.py  plot_graph_network.py  rankplot.py  stacked_barplot.py  upset.py  volcano.py
src/opendvp/pp/: impute_marker_with_annotation.py  rescale.py  scimap_rescale.py
src/opendvp/tl/: __init__.py  filter_adata_by_gates.py  filter_by_abs_value.py  filter_by_annotation.py  filter_by_ratio.py  filter_features_byNaNs.py  impute_gaussian.py  scimap_phenotype.py  scimap_spatial_cluster.py  scimap_spatial_lda.py  spatial_autocorrelation.py  spatial_hyperparameter_search.py  stats_anova.py  stats_average_samples.py  stats_bootstrap.py  stats_ttest.py
src/opendvp/utils/: __init__.py  parse_color_for_qupath.py  utils.py
tests/: utils_for_tests.py
tests/imaging/: test_mask_to_polygons.py
tests/io/: test_DIANN_to_adata.py  test_adata_to_qupath.py  test_export_adata.py  test_export_figure.py  test_import_perseus.py  test_import_thresholds.py  test_quant_to_adata.py
tests/metrics/: test_coefficient_of_variation.py
tests/plotting/: test_correlation_heatmap.py  test_density.py  test_imputation_qc.py  test_upset.py
tests/pp/: test_impute_marker_with_annotation.py  test_rescale.py
tests/test_data/imaging/: blobs_labels.tif
tests/tl/: test_filter_adata_by_gates.py  test_filter_by_abs_value.py  test_filter_by_annotation.py  test_filter_by_ratio.py  test_filter_features_byNaNs.py  test_impute_gaussian.py  test_spatial_autocorrelation.py  test_stats_bootstrap.py
