[project]
name = "openDVP"
version = "0.5.6"
description = "open-sourced Deep Visual Proteomics toolkit"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {file = "LICENSE"}
authors = [{name = "Jose Nimo", email = "jose.nimo@mdc-berlin.de"}]
maintainers = [{ name = "Jose Nimo", email = "jose.nimo@mdc-berlin.de" }]

dependencies = [
    "anndata>=0.9.1, <0.11",
    "geopandas>=0.14",
    "ipykernel",
    "numba>=0.55.0",
    "numpy",
    "pandas",
    "matplotlib<3.9.0",
    "seaborn",
    "scanpy==1.11.0",
    "plotly>=5.24.1,<6",
    "shapely>=2.0.1",
    "loguru",
    "scipy<1.13", #gensim breaks above
    "scikit-learn",
    "scikit-image",
    "adjusttext",
    "pingouin",
    "libpysal",
    "esda",
    "upsetplot",
    "perseuspy>=0.3.9,<0.4",
    "gensim>= 4.3.2",
    # "pyproj>=3.6", moved to pixi.tools.dependencies
    ]

[project.optional-dependencies]
spatialdata = [
    "spatialdata==0.4.0",
    "napari-spatialdata",
    "pyqt5",
    "spatialdata-plot",
]
dev = [
    "ruff",
    "pytest",
    "tox",
    "hatchling",
]

docs = [
    "sphinx",
    "sphinx_copybutton",
    "sphinxcontrib-bibtex", 
    "sphinx_tabs", 
    "sphinxext-opengraph", 
    "sphinx-book-theme",
    "twine",
    "myst-parser",
    "myst_nb",
    "nbsphinx",
    "sphinx_autodoc_typehints"
]

[project.urls]
"Documentation" = "https://your-username.github.io/your-repo-name"
"Homepage" = "https://github.com/CosciaLab/openDVP"
"Source" = "https://github.com/CosciaLab/openDVP"

[tool.pixi.environments]
default =       {features = [],                 solve-group = "default"}
spatialdata =   {features = ["spatialdata"],    solve-group = "spatialdata"}
dev =           {features = ["dev"],            solve-group = "dev"}
docs =          {features = ["docs"],           solve-group = "docs"}
dev-sdata =     {features = ["dev", "spatialdata"],solve-group = "dev-sdata"}

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
opendvp = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyproj = "3.7.1.*" 

## FORMATTING AND LINTING ##

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
per-file-ignores."*/__init__.py" = [ "F401" ]
per-file-ignores."docs/*" = [ "I" ]
per-file-ignores."tests/*" = [ "D" ]

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env",
    "docs",
    "notebooks",
    "tests/data",
    "src/opendvp/tl/scimap_*.py",
    "src/opendvp/pp/scimap_*.py",
    "src/opendvp/experimental/*",
]

select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]

ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
